replacing some Left and Right xml tags with Start and End

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:paddingLeft="@dimen/activity_margin"
-            android:paddingRight="@dimen/activity_margin" />
+            android:paddingStart="@dimen/activity_margin"
+            android:paddingEnd="@dimen/activity_margin" />
 
     </com.simplemobiletools.commons.views.MyViewPager>
 </LinearLayout>
