--- a/app/src/main/res/layout/open_note_item.xml
+++ b/app/src/main/res/layout/open_note_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/open_note_item_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +9,7 @@
         android:id="@+id/open_note_item_radio_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/open_note_item_icon"/>
+        android:layout_toStartOf="@+id/open_note_item_icon" />
 
     <ImageView
         android:id="@+id/open_note_item_icon"
@@ -19,6 +18,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/small_margin"
         android:padding="@dimen/small_margin"
-        android:src="@drawable/ic_attach_file_vector"/>
+        android:src="@drawable/ic_attach_file_vector" />
 
 </RelativeLayout>
