--- a/app/src/main/res/layout/dialog_new_checklist_item.xml
+++ b/app/src/main/res/layout/dialog_new_checklist_item.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_margin"
+    android:paddingStart="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
-    android:paddingRight="@dimen/activity_margin">
+    android:paddingEnd="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyEditText
         android:id="@+id/checklist_item_title_1"
