--- a/app/src/main/res/layout/dialog_new_note.xml
+++ b/app/src/main/res/layout/dialog_new_note.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_margin"
+    android:paddingStart="@dimen/activity_margin"
     android:paddingTop="@dimen/small_margin"
-    android:paddingRight="@dimen/activity_margin">
+    android:paddingEnd="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyEditText
         android:id="@+id/note_title"
@@ -16,14 +15,14 @@
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="textCapSentences"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/new_note_type_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/medium_margin"
-        android:text="@string/new_note_type"/>
+        android:text="@string/new_note_type" />
 
     <RadioGroup
         android:id="@+id/new_note_type"
@@ -37,7 +36,7 @@
             android:checked="true"
             android:paddingTop="@dimen/normal_margin"
             android:paddingBottom="@dimen/normal_margin"
-            android:text="@string/text_note"/>
+            android:text="@string/text_note" />
 
         <com.simplemobiletools.commons.views.MyCompatRadioButton
             android:id="@+id/type_checklist"
@@ -45,7 +44,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/normal_margin"
             android:paddingBottom="@dimen/normal_margin"
-            android:text="@string/checklist"/>
+            android:text="@string/checklist" />
 
     </RadioGroup>
 </LinearLayout>
