--- a/app/src/main/res/layout/dialog_open_file.xml
+++ b/app/src/main/res/layout/dialog_open_file.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/open_file_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_margin"
+    android:paddingStart="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
-    android:paddingRight="@dimen/activity_margin">
+    android:paddingEnd="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/open_file_filename_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/filename"
-        android:textSize="@dimen/smaller_text_size"/>
+        android:textSize="@dimen/smaller_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/open_file_filename"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_margin"
+        android:layout_marginStart="@dimen/activity_margin"
         android:layout_marginBottom="@dimen/activity_margin"
         android:paddingTop="@dimen/small_margin"
-        android:paddingRight="@dimen/small_margin"/>
+        android:paddingEnd="@dimen/small_margin" />
 
     <RadioGroup
         android:id="@+id/open_file_type"
@@ -37,7 +36,7 @@
             android:checked="true"
             android:paddingTop="@dimen/normal_margin"
             android:paddingBottom="@dimen/normal_margin"
-            android:text="@string/update_file_at_note"/>
+            android:text="@string/update_file_at_note" />
 
         <com.simplemobiletools.commons.views.MyCompatRadioButton
             android:id="@+id/open_file_content_only"
@@ -45,7 +44,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/normal_margin"
             android:paddingBottom="@dimen/normal_margin"
-            android:text="@string/only_import_file_content"/>
+            android:text="@string/only_import_file_content" />
 
     </RadioGroup>
 </LinearLayout>
