--- a/app/src/main/res/layout/dialog_rename_note.xml
+++ b/app/src/main/res/layout/dialog_rename_note.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,5 +14,6 @@
         android:inputType="textCapSentences"
         android:singleLine="true"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
+
 </LinearLayout>
