--- a/app/src/main/res/layout/dialog_open_note.xml
+++ b/app/src/main/res/layout/dialog_open_note.xml
@@ -4,11 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/dialog_open_note_linear"
+    <RelativeLayout
+        android:id="@+id/dialog_open_note_wrapper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_margin"
-        android:orientation="vertical" />
+        android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:id="@+id/dialog_open_note_linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:orientation="vertical" />
+
+        <ImageView
+            android:id="@+id/dialog_open_note_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_below="@+id/dialog_open_note_linear"
+            android:background="@color/divider_grey"
+            android:importantForAccessibility="no" />
+
+        <RadioGroup
+            android:id="@+id/dialog_open_note_create_new"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dialog_open_note_divider"
+            android:padding="@dimen/normal_margin">
+
+            <com.simplemobiletools.commons.views.MyCompatRadioButton
+                android:id="@+id/dialog_open_note_new_radio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingBottom="@dimen/normal_margin"
+                android:text="@string/create_new_note" />
+
+        </RadioGroup>
+    </RelativeLayout>
 </ScrollView>
