--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/save_note"
         android:icon="@drawable/ic_save_vector"
@@ -35,6 +35,11 @@
         android:id="@+id/rename_note"
         android:icon="@drawable/ic_rename_new"
         android:title="@string/rename_note"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/remove_done_items"
+        android:title="@string/remove_done_items"
+        android:icon="@drawable/ic_delete_vector"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/share"
