--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -8,7 +8,8 @@
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="@drawable/selector">
+    android:foreground="@drawable/selector"
+    android:paddingEnd="@dimen/normal_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/checklist_title"
@@ -26,7 +27,8 @@
         android:id="@+id/checklist_image"
         android:layout_width="@dimen/checklist_image_size"
         android:layout_height="@dimen/checklist_image_size"
-        android:padding="@dimen/activity_margin"
+        android:paddingTop="@dimen/medium_margin"
+        android:paddingBottom="@dimen/medium_margin"
         android:src="@drawable/ic_cross_vector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/checklist_drag_handle"
@@ -36,7 +38,8 @@
         android:id="@+id/checklist_drag_handle"
         android:layout_width="@dimen/checklist_image_size"
         android:layout_height="@dimen/checklist_image_size"
-        android:padding="@dimen/normal_margin"
+        android:paddingTop="@dimen/normal_margin"
+        android:paddingBottom="@dimen/normal_margin"
         android:src="@drawable/ic_drag_handle_vector"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
