make the checklist cross and check a bit smaller

--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -27,8 +27,8 @@
         android:id="@+id/checklist_image"
         android:layout_width="@dimen/checklist_image_size"
         android:layout_height="@dimen/checklist_image_size"
-        android:paddingTop="@dimen/medium_margin"
-        android:paddingBottom="@dimen/medium_margin"
+        android:paddingTop="@dimen/normal_margin"
+        android:paddingBottom="@dimen/normal_margin"
         android:src="@drawable/ic_cross_vector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/checklist_drag_handle"
